--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <div class="share-buttons" id="shareButtons" style="display:none;">
       <p>แชร์ผลลัพธ์ของคุณ:</p>
       <button onclick="shareResult('facebook')" aria-label="แชร์ไปยัง Facebook">Facebook</button>
-      <button onclick="shareResult('twitter')" aria-label="แชร์ไปยัง Twitter">Twitter</button>
-      <button onclick="shareResult('line')" aria-label="แชร์ไปยัง LINE">LINE</button>
+      <button onclick="shareResult('nstagram')" aria-label="แชร์ไปยัง Instagram">IG</button>
     </div>
   </div>
 
