--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
       <dt>ไซส์ถุงยางมีผลกับความปลอดภัยไหม?</dt>
       <dd>ไซส์ที่พอดีช่วยลดความเสี่ยงถุงยางแตกหรือหลุด ทำให้ปลอดภัยมากขึ้นครับ</dd>
       <dt>ควรวัดความยาวหรือเส้นรอบวงอย่างไร?</dt>
-      <dd>วัดความยาวจากโคนถึงปลาย และวัดเส้นรอบวงที่โคนในขณะอวัยวะแข็งตัวครับ</dd>
+      <dd>วิธีวัด:
+
+ใช้สายวัดแบบนุ่ม (เช่น สายวัดจักรเย็บผ้า)
+
+พันรอบจุดที่หนาที่สุดของลำ (มักอยู่กลางๆ หรือโคน)
+
+อย่ารัดแน่นหรือหลวมเกินไป — พอดีแบบแนบสนิท
+
+✳️ ถ้าไม่มีสายวัดนุ่ม: ใช้เชือกพันรอบ แล้วเอาความยาวไปวัดกับไม้บรรทัดแทน</dd>
     </dl>
   </section>
 
