--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>คำนวณไซส์ถุงยาง</title>
-  <meta name="description" content="เว็บคำนวณขนาดน้องชาย พร้อมแนะนำถุงยางที่เหมาะกับคุณ คลิกเพื่อสั่งซื้อได้ทันที" />
-  <meta name="keywords" content="ขนาดน้องชาย, ถุงยาง, วัดขนาด, เลือกไซส์, คอนดอม" />
+ <title>วัดขนาดน้องชาย | แนะนำถุงยางที่เหมาะกับคุณ</title>
+<meta name="description" content="เครื่องมือวัดขนาดน้องชายออนไลน์ พร้อมแนะนำถุงยางไซซ์เหมาะสม พร้อมลิงก์ซื้อของแท้">
+<meta name="keywords" content="วัดขนาดน้องชาย, ไซส์ถุงยาง, คำนวณขนาด, ถุงยางเหมาะสม">
   <meta name="robots" content="index, follow" />
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-X8GBD7D3H4"></script>
   <script>
